--- a/ExpoRouter/LinkarPaginas/app.json
+++ b/ExpoRouter/LinkarPaginas/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "EntregarSegunda",
-    "slug": "EntregarSegunda",
+    "name": "LinkarPaginas",
+    "slug": "LinkarPaginas",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
