--- a/ExpoRouter/LinkarPaginas/package.json
+++ b/ExpoRouter/LinkarPaginas/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "entregarsegunda",
+  "name": "linkarpaginas",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -9,7 +9,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "scheme": "LinkarPaginas"
   },
   "jest": {
     "preset": "jest-expo"
@@ -33,8 +34,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "react-router-dom": "^6.26.1"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -46,5 +46,9 @@
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
-  "private": true
+  "private": true,
+
+  "web": {
+    "bundler": "metro"
+  }
 }
